Improve the html contents

--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <h1>Ferds Formanes' Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
-    <hr/>
-
+    <section id="about">
+        <header>
+            <h1>Ferds Formanes' Portfolio</h1>
+            <h3>Network Automation Engineer</h3>
+            <p>I specialize in automating network tasks using Python, Netmiko, and REST APIs, and I am currently deepening my expertise in programming to further enhance my automation capabilities.</p>
+        </header>
+        <hr/>
+    </section>
     <section id="projects">
         <h2>Projects</h2>
         <ul>
             <li>
-                <h3>Backup Script for Cisco & HP Switches</h3>
-                <p>Python script using Netmiko to back up config from multiple devices.</p>
-                <a href="scripts/network_device_class_example.py" download>Download Script</a>
+                <h3>Mini Python Projects to Automate Network Devices</h3>
+                <p>These projects demonstrate various techniques for automating network devices using Python.</p>
+                <ul>
+                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/oop_version_collector/oop_version_collector.py">oop_version_collector.py</a></li>
+                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/class_inheritance_netmiko/class_inheritance_netmiko.py">class_inheritance_netmiko.py</a></li>
+                </ul>
             </li>
             <li>
                 <h3>Meraki Dashboard API Automation</h3>
@@ -39,26 +46,18 @@
         </ul>
     </section>
 
-    <section id="youtube">
-        <h2>YouTube Channel</h2>
-        <p>
-            I create programming tutorials, automation scripts, and walkthroughs on network engineering topics.
-            Check out my channel:
-            <a href="https://www.youtube.com/@FerdsTechChannel" target="_blank">youtube.com/@FerdsTechChannel</a>
-        </p>
-        <iframe width="560" height="315"
-            src="https://www.youtube.com/embed/0zcX3cJVgx0"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-        </iframe>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Feel free to reach out for collaboration or inquiries!</p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/ferdsformanes" target="_blank" rel="noopener noreferrer">linkedin.com/in/ferdsformanes</a></p>
+        <p>Visit my YouTube channel: <a href="https://www.youtube.com/@FerdsTechChannel" target="_blank" rel="noopener noreferrer">youtube.com/@FerdsTechChannel</a></p>
     </section>
 
-    <nav>
-        <a href="public/about.html">About Me</a>
-        <a href="public/contact.html">Contact Me</a>
-    </nav>
+
+
+    <footer>
+        <p>&copy; 2025 Ferds Formanes. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
