--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <h1>Ferds Formanes' Portfolio</h1>
             <h3>Network Automation Engineer</h3>
-            <p>I specialize in automating network tasks using Python, Netmiko, and REST APIs, and I am currently deepening my expertise in programming to further enhance my automation capabilities.</p>
+            <p>I specialize in automating network tasks using Python, Netmiko, and REST APIs and <br/> I am currently  deepening my expertise in programming to further enhance my automation capabilities.</p>
         </header>
         <hr/>
     </section>
