Add script links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <section id="about">
         <header>
-            <h1>Ferds Formanes' Portfolio</h1>
+            <h1>Ferdinand M. Formanes</h1>
             <h3>Network Automation Engineer</h3>
             <p>I specialize in automating network tasks using Python, Netmiko, and REST APIs and <br/> I am currently  deepening my expertise in programming to further enhance my automation capabilities.</p>
         </header>
@@ -21,13 +21,16 @@
                 <h3>Mini Python Projects to Automate Network Devices</h3>
                 <p>These projects demonstrate various techniques for automating network devices using Python.</p>
                 <ul>
-                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/oop_version_collector/oop_version_collector.py">oop_version_collector.py</a></li>
-                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/class_inheritance_netmiko/class_inheritance_netmiko.py">class_inheritance_netmiko.py</a></li>
+                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/oop_version_collector/oop_version_collector.py" target="_blank">View oop_version_collector.py on GitHub</a></li>
+                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/class_inheritance_netmiko/class_inheritance_netmiko.py" target="_blank">View class_inheritance_netmiko.py on GitHub</a></li>
                 </ul>
             </li>
             <li>
-                <h3>Meraki Dashboard API Automation</h3>
-                <p>Script to fetch device inventory and create reports in CSV.</p>
+                <h3>Meraki API Automation</h3>
+                <p>These projects demonstrate how to automate Cisco Meraki network devices using Python and the Meraki API.</p>
+                <ul>
+                    <li><a href="https://github.com/ferdsformanes/python_mini_api_projects" target="_blank">View the python_mini_api_projects repository on GitHub</a></li>
+                </ul>
             </li>
         </ul>
     </section>
@@ -56,7 +59,7 @@
 
 
     <footer>
-        <p>&copy; 2025 Ferds Formanes. All rights reserved.</p>
+        <p>&copy; 2025 Ferds Formanes' Portfolio. All rights reserved.</p>
     </footer>
 
 </body>
