Fix wording header section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <section id="about">
         <header>
-            <h1>Ferdinand M. Formanes</h1>
+            <h1>Ferds Formanes' Portfolio</h1>
             <h3>Network Automation Engineer</h3>
             <p>I specialize in automating network tasks using Python, Netmiko, and REST APIs and <br/> I am currently  deepening my expertise in programming to further enhance my automation capabilities.</p>
         </header>
