Fix wording in Projects section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Projects</h2>
         <ul>
             <li>
-                <h3>Mini Python Projects to Automate Network Devices</h3>
+                <h3>Network Automation</h3>
                 <p>These projects demonstrate various techniques for automating network devices using Python.</p>
                 <ul>
                     <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/oop_version_collector/oop_version_collector.py" target="_blank">View oop_version_collector.py on GitHub</a></li>
