Add style.css file

--- a/index.html
+++ b/index.html
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Ferds Formanes' Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
     <section id="about">
         <header>
             <h1>Ferds Formanes' Portfolio</h1>
             <h3>Network Automation Engineer</h3>
-            <p>I automate network tasks using Python, Netmiko, and REST APIs, while<br/> 
-              expanding my programming skills to become a full-stack developer.</p>
+            <p>I specialize in automating network operations using Python, Netmiko, and REST APIs.<br/>
+               I'm also expanding my expertise toward full-stack development.</p>
         </header>
-        <hr/>
     </section>
+
     <section id="projects">
         <h2>Projects</h2>
         <ul>
             <li>
                 <h3>Network Automation</h3>
-                <p>These projects demonstrate various techniques for automating network devices using Python.</p>
+                <p>A collection of scripts and tools for automating network devices using Python:</p>
                 <ul>
-                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/oop_version_collector/oop_version_collector.py" target="_blank">View oop_version_collector.py on GitHub</a></li>
-                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/class_inheritance_netmiko/class_inheritance_netmiko.py" target="_blank">View class_inheritance_netmiko.py on GitHub</a></li>
+                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/oop_version_collector/oop_version_collector.py" target="_blank">View oop_version_collector.py</a></li>
+                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/class_inheritance_netmiko/class_inheritance_netmiko.py" target="_blank">View class_inheritance_netmiko.py</a></li>
                 </ul>
             </li>
             <li>
                 <h3>Meraki API Automation</h3>
-                <p>These projects demonstrate how to automate Cisco Meraki network devices using Python and the Meraki API.</p>
+                <p>Projects focused on automating Cisco Meraki networks using Python and the Meraki API:</p>
                 <ul>
-                    <li><a href="https://github.com/ferdsformanes/python_mini_api_projects" target="_blank">View the python_mini_api_projects repository on GitHub</a></li>
+                    <li><a href="https://github.com/ferdsformanes/python_mini_api_projects" target="_blank">View API Projects on GitHub</a></li>
                 </ul>
             </li>
         </ul>
@@ -38,26 +49,23 @@
 
     <section id="skills">
         <h2>Skills</h2>
-        <ul>
-            <li>HTML, CSS, and JavaScript (Soon!)</li>
-            <li>Django (Web Framework)</li>
-            <li>Grafana (Monitoring & Dashboards)</li>
-            <li>SQL and PostgreSQL</li>
-            <li>Git and GitHub</li>
-            <li>Linux (Command Line Fundamentals)</li>
-            <li>Python Programming</li>
-            <li>Network Automation (Netmiko, REST APIs)</li>
-        </ul>
+            <ul>
+                <li><strong>Web Development:</strong> HTML, CSS, JavaScript (in progress), Django</li>
+                <li><strong>Monitoring & Dashboards:</strong> Grafana</li>
+                <li><strong>Databases:</strong> SQL, PostgreSQL</li>
+                <li><strong>Version Control:</strong> Git, GitHub</li>
+                <li><strong>Operating Systems:</strong> Linux (CLI fundamentals)</li>
+                <li><strong>Programming:</strong> Python</li>
+                <li><strong>Network Automation:</strong> Netmiko, REST APIs</li>
+            </ul>
     </section>
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to reach out for collaboration or inquiries!</p>
+        <p>Interested in collaborating or have a question? Let’s connect!</p>
         <p>LinkedIn: <a href="https://linkedin.com/in/ferdsformanes" target="_blank" rel="noopener noreferrer">linkedin.com/in/ferdsformanes</a></p>
-        <p>Visit my YouTube channel: <a href="https://www.youtube.com/@FerdsTechChannel" target="_blank" rel="noopener noreferrer">youtube.com/@FerdsTechChannel</a></p>
+        <p>YouTube: <a href="https://www.youtube.com/@FerdsTechChannel" target="_blank" rel="noopener noreferrer">youtube.com/@FerdsTechChannel</a></p>
     </section>
-
-
 
     <footer>
         <p>&copy; 2025 Ferds Formanes' Portfolio. All rights reserved.</p>
