Fixed header section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section id="about">
         <header>
-            <h1>Ferds Formanes' Portfolio</h1>
+            <h1>Ferdinand M. Formanes</h1>
             <h3>Network Automation Engineer</h3>
             <p>I specialize in automating network operations using Python, Netmiko, and REST APIs.<br/>
                I'm also expanding my expertise toward full-stack development.</p>
@@ -63,8 +63,10 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <p>Interested in collaborating or have a question? Let’s connect!</p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/ferdsformanes" target="_blank" rel="noopener noreferrer">linkedin.com/in/ferdsformanes</a></p>
-        <p>YouTube: <a href="https://www.youtube.com/@FerdsTechChannel" target="_blank" rel="noopener noreferrer">youtube.com/@FerdsTechChannel</a></p>
+        <ul>
+            <li>LinkedIn: <a href="https://linkedin.com/in/ferdsformanes" target="_blank" rel="noopener noreferrer">linkedin.com/in/ferdsformanes</a></li>
+            <li>YouTube: <a href="https://www.youtube.com/@FerdsTechChannel" target="_blank" rel="noopener noreferrer">youtube.com/@FerdsTechChannel</a></li>
+        </ul>
     </section>
 
     <footer>
