Fixed header section

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <header>
             <h1>Ferdinand M. Formanes</h1>
             <h3>Network Automation Engineer</h3>
-            <p>I specialize in automating network operations using Python, Netmiko, and REST APIs.<br/>
-               I'm also expanding my expertise toward full-stack development.</p>
+            <p>I specialize in automating network operations using Python, Netmiko, and REST APIs, 
+                helping streamline and simplify infrastructure tasks. I'm also expanding my expertise 
+                into full-stack development, combining my networking background with modern web technologies 
+                to build end-to-end solutions.</p>
         </header>
     </section>
 
