--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Ferds Formanes' Portfolio</title>
-     <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css" />
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="favicon.png">
+
 </head>
 <body>
 
