--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="skills">
         <h2>Skills</h2>
             <ul>
-                <li><strong>Web Development:</strong> HTML, CSS, JavaScript (in progress), Django</li>
+                <li><strong>Web Development:</strong> HTML, CSS, Bootstrap, JavaScript (in progress), Django</li>
                 <li><strong>Monitoring & Dashboards:</strong> Grafana</li>
                 <li><strong>Databases:</strong> SQL, PostgreSQL</li>
                 <li><strong>Version Control:</strong> Git, GitHub</li>
