--- a/index.html
+++ b/index.html
@@ -36,18 +36,17 @@
         <h2>Projects</h2>
         <ul>
             <li>
-                <h3>Network Automation</h3>
-                <p>A collection of scripts and tools for automating network devices using Python:</p>
+                <h3>Python Automation Projects</h3>
+                <p>Hands-on scripts and mini tools built with Python to automate repetitive tasks and improve productivity.</p>
                 <ul>
-                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/oop_version_collector/oop_version_collector.py" target="_blank">View oop_version_collector.py</a></li>
-                    <li><a href="https://github.com/ferdsformanes/python_mini_projects/blob/main/class_inheritance_netmiko/class_inheritance_netmiko.py" target="_blank">View class_inheritance_netmiko.py</a></li>
+                    <li><a href="https://github.com/ferdsformanes/python_mini_automation_projects" target="_blank">View Projects on GitHub</a></li>
                 </ul>
             </li>
             <li>
-                <h3>Meraki API Automation</h3>
-                <p>Projects focused on automating Cisco Meraki networks using Python and the Meraki API:</p>
+                <h3>Network Automation with REST APIs</h3>
+                <p>Projects focused on automating network operations using Python and REST API integrations with real-world platforms.</p>
                 <ul>
-                    <li><a href="https://github.com/ferdsformanes/python_mini_api_projects" target="_blank">View API Projects on GitHub</a></li>
+                    <li><a href="https://github.com/ferdsformanes/python_mini_api_projects" target="_blank">Explore API Automation Projects</a></li>
                 </ul>
             </li>
         </ul>
@@ -56,7 +55,7 @@
     <section id="skills">
         <h2>Skills</h2>
             <ul>
-                <li><strong>Web Development:</strong> HTML, CSS, Bootstrap, JavaScript (in progress), Django</li>
+                <li><strong>Web Development:</strong> HTML, CSS, JavaScript (in progress), Django</li>
                 <li><strong>Monitoring & Dashboards:</strong> Grafana</li>
                 <li><strong>Databases:</strong> SQL, PostgreSQL</li>
                 <li><strong>Version Control:</strong> Git, GitHub</li>
