--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2>Skills</h2>
             <ul>
                 <li><strong>Web Development:</strong> HTML, CSS, JavaScript (in progress), Django</li>
-                <li><strong>Monitoring & Dashboards:</strong> Grafana</li>
+                <li><strong>Monitoring & Dashboards:</strong> Entuity, Grafana</li>
                 <li><strong>Databases:</strong> SQL, PostgreSQL</li>
                 <li><strong>Version Control:</strong> Git, GitHub</li>
                 <li><strong>Operating Systems:</strong> Linux (CLI fundamentals)</li>
@@ -80,3 +80,4 @@
 
 </body>
 </html>
+
